<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.app.sportcity.activities.LoginActivity">


    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_vertical_margin"-->
    <!--android:paddingRight="@dimen/activity_vertical_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:layout_marginTop="25dp">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="@dimen/space_16"
            app:srcCompat="@drawable/ic_add_white_24dp" />

    </FrameLayout>

    <View
        android:id="@+id/tempView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:elevation="5dp" />


    <!--<ScrollView-->
        <!--android:layout_below="@id/tempView"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/space_33"
            android:orientation="vertical">

            <EditText
                android:id="@+id/tvUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_text_bottom"
                android:drawableLeft="@drawable/ic_person_black_48dp"
                android:drawablePadding="@dimen/space_16"
                android:hint="@string/username"
                android:inputType="text"
                android:maxLines="1"
                android:textColorHint="@color/lightGrey888888"
                android:textSize="@dimen/txt_15" />

            <EditText
                android:id="@+id/tvPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_18"
                android:background="@drawable/border_text_bottom"
                android:drawableLeft="@drawable/ic_lock_black_48dp"
                android:drawablePadding="@dimen/space_16"
                android:gravity="center_vertical"
                android:hint="@string/pwd"
                android:inputType="text"
                android:maxLines="1"
                android:textColorHint="@color/lightGrey888888"
                android:textSize="@dimen/txt_15" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_33"
                android:weightSum="3">

                <TextView
                    android:id="@+id/tv_fb"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/space_30"
                    android:layout_marginRight="7dp"
                    android:layout_weight="1"
                    android:background="@color/fb"
                    android:gravity="center"
                    android:text="@string/fb"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/txt_12" />

                <TextView
                    android:id="@+id/tv_google"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/space_30"
                    android:layout_marginLeft="3.5dp"
                    android:layout_marginRight="3.5dp"
                    android:layout_weight="1"
                    android:background="@color/google"
                    android:gravity="center"
                    android:text="@string/google"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/txt_12" />

                <TextView
                    android:id="@+id/tv_twtr"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/space_30"
                    android:layout_marginLeft="7dp"
                    android:layout_weight="1"
                    android:background="@color/twtr"
                    android:gravity="center"
                    android:text="@string/twtr"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/txt_12" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_signIn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_50"
                android:layout_marginTop="@dimen/space_33"
                android:background="@drawable/btn_primary"
                android:text="@string/signIn"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tv_forgotPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textSize="@dimen/txt_10"
                android:text="@string/forgotPwd"
                android:padding="@dimen/space_13" />

        </LinearLayout>

    <!--</ScrollView>-->
</RelativeLayout>
